--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="banner">
         <div class="banner-contents">
           <p>The #1 Dog Spa in NYC!</p>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/project-i/images/dog.svg" class="dog">
+          <img src="./img/dog.svg" class="dog">
         </div>        
       </div>
 
@@ -26,20 +26,20 @@
       </div>
 
       <div class="box address">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/project-i/images/marker.svg" class="icon">
+          <img src="./img/marker.svg" class="icon">
           <p>ADDRESS:
           <br>233 Lewis Avenue,
           <br>Brooklyn, NY 11233</p>
       </div>
 
       <div class="box hours">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/project-i/images/clock.svg" class="icon">
+          <img src="./img/clock.svg" class="icon">
           <p>HOURS:
           <br>Mon-Fri 8:00AM-9:00PM</p>
       </div>
 
       <div class="box call-us">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/project-i/images/telephone.png" class="icon">
+          <img src="./img/telephone.webp" class="icon">
           <p>CALL US:
           <br>718-324-6751</p>
       </div>
